# 42_python_for_data_science

./: README.md
0-Starting/ex00/: Hello.py
0-Starting/ex01/: format_ft_time.py
0-Starting/ex02/: find_ft_type.py
0-Starting/ex03/: NULL_not_found.py
0-Starting/ex04/: whatis.py
0-Starting/ex05/: building.py
0-Starting/ex06/: filterstring.py  ft_filter.py
0-Starting/ex07/: sos.py
0-Starting/ex08/: Loading.py  tester.py
0-Starting/ex09/: LICENSE  README.md  pyproject.toml  setup.cfg  test_package.py
0-Starting/ex09/ft_package/: my_module.py
1-Array/ex00/: give_bmi.py
1-Array/ex01/: array2D.py  tester.py
1-Array/ex03/: load_image.py  zoom.py
